--- a/WebContent/app/css/_search.scss
+++ b/WebContent/app/css/_search.scss
@@ -410,3 +410,9 @@
 
     }
 }
+#successOverlay,#addOverlay{
+    flex-flow: column;
+    justify-content: center;
+    align-items: center; 
+    align-content: flex-start;
+}
