--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -1260,7 +1260,14 @@ tbody tr:nth-child(even) {
     border-bottom: none;
     }
 }
-
+.float-right{
+  position: absolute;
+  right: 11rem;
+  padding: 0.61rem 1rem;
+  border-radius: 0.2rem;
+  box-shadow: none;
+  cursor: pointer;
+}
 
 .reveal {
   animation: reveal ease-in-out 0.3s forwards;
