--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -395,6 +395,7 @@
             flex-flow: row wrap;
             justify-content: space-between;
             padding: 1rem;
+            margin-bottom: 1.5rem;
         }
         &_schedule{
             flex: 1;
