--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -1631,6 +1631,12 @@ tbody tr:nth-child(even) {
   box-shadow: none;
   cursor: pointer;
 }
+@media (max-width: 59.9375em) {
+  .float-right {
+    position: static;
+    margin: 0 auto 0.5rem auto;
+  }
+}
 
 .reveal {
   -webkit-animation: reveal ease-in-out 0.3s forwards;
@@ -2655,6 +2661,7 @@ tbody tr:nth-child(even) {
   flex-flow: row wrap;
   justify-content: space-between;
   padding: 1rem;
+  margin-bottom: 1.5rem;
 }
 .main__lesson_schedule {
   flex: 1;
