Add Lessons Filter

--- a/WebContent/app/css/admin-styles.css
+++ b/WebContent/app/css/admin-styles.css
@@ -1631,6 +1631,9 @@ tbody tr:nth-child(even) {
   box-shadow: none;
   cursor: pointer;
 }
+.float-right:focus, .float-right:hover {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 @media (max-width: 59.9375em) {
   .float-right {
     position: static;
