Add Add Meeting Link and Re-Schedule options to Lessons

--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -458,6 +458,9 @@
         display: flex;
         width: 100%;
         flex-flow: row wrap;
+        a{
+          margin-left: 0.5rem;
+        }
         button {
           display: block;
           height: 2rem;
