--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -445,6 +445,7 @@
         flex-flow: column wrap;
         justify-content: space-between;
         align-content: space-between;
+        padding-left: 0.5rem;
       }
       &_name {
         display: block;
