Add Tutor Profile

--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -438,6 +438,7 @@
           display: block;
           max-height: 5rem;
           width: auto;
+          border-radius: 0.4rem;
         }
       }
       &_info {
