--- a/WebContent/app/css/_search.scss
+++ b/WebContent/app/css/_search.scss
@@ -194,6 +194,7 @@
                     display: block;
                     max-width: 100%;
                     height: auto;
+                    border-radius: 0.4rem;
                 }
             }
             &_price{
@@ -219,6 +220,7 @@
             &_name{
                 font-size: 1.5rem;
                 line-height: 0;
+                padding-top: 0.5rem;
             }
             &_info{
                 margin-bottom: 1rem;
@@ -254,6 +256,7 @@
                     width: 100%;
                     height: auto;
                     margin: 0 auto;
+                    border-radius: 0.4rem;
                 }
             }
             p{
