--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -288,25 +288,51 @@
     }
   }
   &__big-tile {
-    width: 48%;
+    width: 48.85%;
     background-color: $white;
     height: max-content;
     min-height: 15rem;
     padding: 1rem;
-    box-shadow: $shadow1;
-    margin-top: 2rem;
+    box-shadow: $shadow5;
+    margin-top: 1rem;
     border-radius: 0.4rem;
     p {
       text-align: center;
     }
+    &_lesson{
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      border: 1px solid $lightBlue;
+      box-shadow: $shadow5;
+      padding: 0.5rem;
+      border-radius: 0.4rem;
+      margin-bottom: 1rem;
+    }
+    &_schedule,&_info{
+      display: flex;
+      flex-direction: column;
+      span{
+        display: block;
+      }
+    }
+    &_schedule{
+      span{
+        font-size: 0.85rem;
+      }
+    }
+    &_tutor{
+      font-size: 0.8rem;
+      color: #555;
+    }
   }
   &__tile {
     background-color: $white;
-    box-shadow: $shadow1;
+    box-shadow: $shadow5;
     border-radius: 0.4rem;
     display: flex;
     flex-flow: row wrap;
-    width: 30%;
+    width: 32%;
     &_title {
       display: block;
       width: 100%;
@@ -314,15 +340,21 @@
       padding: 1rem;
     }
     &_img {
-      width: 25%;
-      padding: 1rem;
+      width: 4rem;
+      flex: none;
+      margin: 1rem;
+      margin-right: 0;
+      padding: 0.5rem;
       background-color: $lightBlue;
       border-radius: 50%;
-      margin: 0 0 1rem 1rem;
+      &_wallet{
+        padding: 0.25rem;
+      }
       img {
         display: block;
         max-width: 100%;
         height: auto;
+        padding: 0.25rem;
       }
     }
     &_number {
